# diplom

./: .gitignore  CMakeLists.txt  mur_Ex0.txt  mur_Ey0.txt  programm.txt
results/: matrix.txt  mur_X.txt  mur_Y.txt  mur_Z.txt
src/: 3D.cpp  FDTD.cpp  FDTD.h  Liao.cpp  Mur.cpp  Mur.h  Obj.h  PML.cpp  PML_E.cpp  PML_H.cpp  main.cpp  my_pr.py
